trunk/MP_wrapper/MP_wrapper/mpdev.h


typedef enum MP_TYPE
{
	MP150 = 101,	
	MP36			
} MPTYPE;
typedef enum MP_COM_TYPE
{
	MPUSB = 10, 
	MPUDP		
} MPCOMTYPE;
typedef enum TRIGGER_OPT
{
	MPTRIGOFF = 1, 
	MPTRIGEXT,	
	MPTRIGACH,	
	MPTRIGDCH	
} TRIGGEROPT;
typedef enum DIGITAL_OPT
{
	SET_LOW_BITS = 1, 
	SET_HIGH_BITS, 
	READ_LOW_BITS, 
	READ_HIGH_BITS 
} DIGITALOPT;
typedef enum MP_RETURN_CODE
{
	MPSUCCESS = 1, 
	MPDRVERR,	
	MPDLLBUSY,	
	MPINVPARA,	
	MPNOTCON,	
	MPREADY,	
	MPWPRETRIG, 
	MPWTRIG,	
	MPBUSY,		
	MPNOACTCH,	
	MPCOMERR,	
	MPINVTYPE,	
	MPNOTINNET,	
	MPSMPLDLERR,
	MPMEMALLOCERR, 
	MPSOCKERR,	
	MPUNDRFLOW, 
	MPPRESETERR, 
	MPPARSERERR	
} MPRETURNCODE;
typedef enum MP3XOUTPUT_OPT
{
	OUTPUTVOLTAGELEVEL		= 2, 
	OUTPUTCHANNEL3			= 3, 
	OUTPUTCHANNEL1			= 5, 
	OUTPUTCHANNEL2			= 6, 
	OUTPUTCHANNEL4			= 7, 
	OUTPUTGROUND			= 0x7f 
} MP3XOUTMODE;
MPDLL_EXPORT MPRETURNCODE _stdcall configChannelByPresetID(const DWORD n, const char * uid);
MPDLL_EXPORT MPRETURNCODE _stdcall connectMPDev(const MPTYPE type, const MPCOMTYPE method, const char * MP150SN);
MPDLL_EXPORT MPRETURNCODE _stdcall disconnectMPDev();
MPDLL_EXPORT MPRETURNCODE _stdcall findAllMP150();
MPDLL_EXPORT MPRETURNCODE _stdcall getChScaledInputRange(const DWORD n, double * minRange, double * maxRange);
MPDLL_EXPORT MPRETURNCODE _stdcall getDigitalIO(const DWORD n, BOOL * state, const DIGITALOPT opt);
MPDLL_EXPORT MPRETURNCODE _stdcall getMostRecentSample(double data[]);
MPDLL_EXPORT MPRETURNCODE _stdcall getMPBuffer(const DWORD numSamples, double buff[]);
MPDLL_EXPORT MPRETURNCODE _stdcall getMPDaemonLastError();
MPDLL_EXPORT MPRETURNCODE _stdcall getStatusMPDev();
MPDLL_EXPORT MPRETURNCODE _stdcall loadXMLPresetFile(const char * filename);
MPDLL_EXPORT MPRETURNCODE _stdcall readAvailableMP150SN(char buff[], const DWORD numchartoread, DWORD * numcharread);
MPDLL_EXPORT MPRETURNCODE _stdcall receiveMPData(double buff[], const DWORD numdatapoints, DWORD * numreceived);
MPDLL_EXPORT MPRETURNCODE _stdcall setAcqChannels(const BOOL analogCH[]);
MPDLL_EXPORT MPRETURNCODE _stdcall setAnalogChScale(const DWORD n, const double unscaled1, const double scaled1, const double unscaled2, const double scaled2);
MPDLL_EXPORT MPRETURNCODE _stdcall setAnalogOut(const double value, const int outchan);
MPDLL_EXPORT MPRETURNCODE _stdcall setAnalogOutputMode (const MP3XOUTMODE mode);
MPDLL_EXPORT MPRETURNCODE _stdcall setDigitalAcqChannels(const BOOL digitalCH[]);
MPDLL_EXPORT MPRETURNCODE _stdcall setDigitalIO(const DWORD n, const BOOL state, const BOOL setnow, const DIGITALOPT opt);
MPDLL_EXPORT MPRETURNCODE _stdcall setMPTrigger(const TRIGGEROPT option, const BOOL posEdge, const double level, const DWORD chNum);
MPDLL_EXPORT MPRETURNCODE _stdcall setSampleRate(const double rate);
MPDLL_EXPORT MPRETURNCODE _stdcall startAcquisition();
MPDLL_EXPORT MPRETURNCODE _stdcall startMPAcqDaemon();
MPDLL_EXPORT MPRETURNCODE _stdcall stopAcquisition();